
New Features:

- Added Bitronix BTM 2.1.4 as alternative to Atomikos
- Added JBoss KIE and Drools libraries (version 6.0.0.Final) and Moqui API
  additions for getting a KieContext, plus Moqui automatically loads and
  builds component kie directories when present
- Updated Apache HttpCore to 4.3.1, HttpClient to 4.3.2, Commons Logging
  to 1.1.3, Commons Codec to 1.6
- Removed Dzhuvinov JSON-RPC jars (implemented internally now)
- Improved and fixed JSON-RPC remote service client and auto-mapping server

- Added ISO 8601 date/time parsing as another default in L10nFacade
- Added transaction-facade.@use-transaction-cache attribute, defaults to
  true, set to false to disable the TransactionCache globally
- Added new transaction-facade sub-elements transaction-jndi and
  transaction-internal instead of single transaction-factory;
  transaction-internal has a class attribute to specify an implementation
  of the TransactionInternal interface to init/destroy the JTA impl
- TransactionFacade now has active Synchronization registry like the active
  XAResource registry per transaction that existed before
- Moved XAResource tools to Synchronization: TransactionCache, OrientDB tx
  handler, ServiceCallSpecial.registerOnCommit() and registerOnRollback(),
  Service ECA rule tx-commit and tx-rollback, EntityDataFeed
- Enhanced EntityDataLoader to also call services, just use the service
  name (leave out hash (#)) instead of entity name for the XML element

Bug Fixes:

- Due to some quirks in Shiro ehcache support it is disabled by default; it
  is still supported for use in distributed environments with shared auth
  cache (see shiro.ini for details)
- Fixed issue with entity-condition in a view-entity when the econdition
  value matched a localized string different from the original value
- Fixed issue with form-single and form-list.@transition when it matches
  a localized string (especially on MySQL or other DBs with case