@@ -50,9 +50,5 @@ class ServiceCallImpl implements ServiceCall {
         return sd
     }
 
-    boolean isEntityAutoPattern() {
-        // if no path, verb is create|update|delete and noun is a valid entity name, do an implicit entity-auto
-        return !path && ("create".equals(verb) || "update".equals(verb) || "delete".equals(verb) || "store".equals(verb)) &&
-                sfi.getEcfi().getEntityFacade().getEntityDefinition(noun) != null
-    }
+    boolean isEntityAutoPattern() { return sfi.isEntityAutoPattern(path, verb, noun) }
 }
