@@ -15,6 +15,7 @@ New Features:
   builds component kie directories when present
 - Updated Apache HttpCore to 4.3.1, HttpClient to 4.3.2, Commons Logging
   to 1.1.3, Commons Codec to 1.6
+- Added Apache Commons CSV 1.0-SNAPSHOT 20140122
 - Removed Dzhuvinov JSON-RPC jars (implemented internally now)
 - Improved and fixed JSON-RPC remote service client and auto-mapping server
 
@@ -32,6 +33,8 @@ New Features:
   Service ECA rule tx-commit and tx-rollback, EntityDataFeed
 - Enhanced EntityDataLoader to also call services, just use the service
   name (leave out hash (#)) instead of entity name for the XML element
+- Enhanced EntityDataLoader to support CSV files with the entity or service
+  name on the first line, then a header line, then the data lines
 
 Bug Fixes:
 
